Opened 15 years ago

Closed 15 years ago

#752 closed defect (fixed)

ffmpeg segmentation fault signal 11

Reported by: Diana Muscalu Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: riff
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

opening an frwu file crashes ffmpeg.

Attachments (5)

corruptfile (1.5 MB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )
bt.txt (887 bytes ) - added by Diana Muscalu 15 years ago.
bt report
gdb.txt (962 bytes ) - added by Diana Muscalu 15 years ago.
gdb report
valgrind.txt (3.5 KB ) - added by Diana Muscalu 15 years ago.
valgrind report
zzuf.txt (618 bytes ) - added by Diana Muscalu 15 years ago.
zzuf report

Download all attachments as: .zip

Change History (6)

by Diana Muscalu, 15 years ago

Attachment: corruptfile added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

by Diana Muscalu, 15 years ago

Attachment: bt.txt added

bt report

by Diana Muscalu, 15 years ago

Attachment: gdb.txt added

gdb report

by Diana Muscalu, 15 years ago

Attachment: valgrind.txt added

valgrind report

by Diana Muscalu, 15 years ago

Attachment: zzuf.txt added

zzuf report

comment:1 by Michael Niedermayer, 15 years ago

Component: FFmpegavcodec
Keywords: riff added
Reproduced by developer: set
Resolution: fixed
Status: newclosed

Bug locally fixed, will be in git master soon

Note: See TracTickets for help on using tickets.