riff: Fix freeing of random value. Fixes Ticket752 Bug-found-by: Diana Elena Muscalu (cherry picked from commit 76b9a0961c33c9eb19b220c6f0edfbb3e79fcd59)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>